--- a/nixie/nixie_app/templates/nixie_app/index.html
+++ b/nixie/nixie_app/templates/nixie_app/index.html
@@ -7,6 +7,12 @@
     <title>{% block 'title' %} {% endblock %}</title>
 </head>
 <style>
+    @font-face {
+	font-family: 'GOST Common';
+	src: local('GOST Common'),
+		url(gost_common.ttf);
+    }
+
     body {
         padding: 0;
         margin: 0;
