--- a/nixie/orders/templates/orders/order/create.html
+++ b/nixie/orders/templates/orders/order/create.html
@@ -180,17 +180,16 @@
             padding-bottom: 25px;
             flex-direction: column;
             position: relative;
-            height: 700px;
+            height: auto;
         }
+
         .left,
         .right {
             width: 100%;
-            position: absolute;
+            margin: 10px 0 10px 0;
             top: 0;
         }
-        .left{
-            top:200px;
-        }
+
 
         .pay_button {
             width: 200px;
