Fixing a font problem Adding and editing the start file Adding and editing the README file

--- a/nixie/nixie_app/templates/nixie_app/index.html
+++ b/nixie/nixie_app/templates/nixie_app/index.html
@@ -7,11 +7,10 @@
     <title>{% block 'title' %} {% endblock %}</title>
 </head>
 <style>
-    {#@font-face {#}
-	{#font-family: 'GOST Common';#}
-	{#src: url('/images/gost_common-webfont.woff2') format('woff2'),#}
-    {#     url('/images/gost_common-webfont.woff') format('woff');#}
-    {#}#}
+    @font-face {
+	font-family: 'GOST Common';
+	src: url('/images/GOST_Common.ttf') format('ttf')
+    }
 
     html{
         background: #181818;
