--- a/nixie/nixie_app/templates/nixie_app/catalog.html
+++ b/nixie/nixie_app/templates/nixie_app/catalog.html
@@ -171,7 +171,7 @@
         font-weight: 600;
         font-size: 30px;
         display: block;
-        margin-top: 10px;
+        margin-top: auto;
         margin-bottom: 10px;
         line-height: 100%;
         color: #DC7A33;
