Added local redis files Added setups Updated README Updated fonts Updated requirements

--- a/nixie/nixie_app/templates/nixie_app/index.html
+++ b/nixie/nixie_app/templates/nixie_app/index.html
@@ -8,8 +8,10 @@
 </head>
 <style>
     @font-face {
-	font-family: 'GOST Common';
-	src: url('/images/GOST_Common.ttf') format('ttf')
+    font-family: 'GOST Common';
+    src: url('/images/GOST_Common.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
     }
 
     html{
