--- a/nixie/nixie_app/templates/nixie_app/main.html
+++ b/nixie/nixie_app/templates/nixie_app/main.html
@@ -18,20 +18,20 @@
     }
 
     .heading_head {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 350;
         font-size: 96px;
         color: #DC7A33;
-        margin-bottom: 0px;
+        margin-bottom: 0;
         text-align: center;
     }
 
     .heading_text {
-        margin-top: 0px;
+        margin-top: 0;
         width: 450px;
         height: 40px;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
@@ -172,8 +172,8 @@
 
     .main_info_text {
         width: 80%;
-        margin-left: 0px;
-        font-family: 'GOST Common';
+        margin-left: 0;
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -237,7 +237,7 @@
     }
 
     .card_title {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 17px;
@@ -251,7 +251,7 @@
     }
 
     .card_price {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 600;
         font-size: 30px;
@@ -270,7 +270,7 @@
     .card_add,
     .card_buy,
     .catalog_button {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -351,7 +351,7 @@
     }
 
     .main_catalog_right_top p {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -410,7 +410,7 @@
 
     .description_card_top p {
         text-align: center;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 500;
         font-size: 28px;
@@ -422,7 +422,7 @@
 
     .description_card_bottom p {
         text-align: center;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -462,7 +462,7 @@
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 44px;
@@ -483,7 +483,7 @@
     .stages_number {
         width: 25%;
         text-align: left;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-weight: 300;
         font-size: 92px;
         line-height: 92px;
@@ -527,7 +527,7 @@
     }
 
     .description_top {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 36px;
@@ -539,7 +539,7 @@
 
     .description_bottom {
         text-align: left;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -567,7 +567,7 @@
 
     .functions_head {
         text-align: center;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 44px;
@@ -614,7 +614,7 @@
     }
 
     .function_description_top {
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -626,7 +626,7 @@
 
     .function_description_bottom {
         text-align: left;
-        font-family: 'GOST Common';
+        font-family: 'GOST Common', serif;
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -689,7 +689,7 @@
         }
 
         .card_title {
-            font-family: 'GOST Common';
+            font-family: 'GOST Common', serif;
             font-style: normal;
             font-weight: 300;
             font-size: 17px;
@@ -703,7 +703,7 @@
         }
 
         .card_price {
-            font-family: 'GOST Common';
+            font-family: 'GOST Common', serif;
             font-style: normal;
             font-weight: 600;
             font-size: 30px;
